--- a/hw6.ipynb
+++ b/hw6.ipynb
@@ -1807,200 +1807,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>wiki query</th>\n",
-       "      <th>text</th>\n",
-       "      <th>n_words</th>\n",
-       "      <th>bow_kmeans</th>\n",
-       "      <th>emb_kmeans</th>\n",
-       "      <th>emb_dbscan</th>\n",
-       "      <th>emb_hierarchical</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Artificial Intelligence</td>\n",
-       "      <td>artificial intelligence ai is the capability of computational systems to perform tasks typically associated with human intelligence such as learning reasoning problem-solving perception and decision-making</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Deep learning</td>\n",
-       "      <td>in machine learning deep learning focuses on utilizing multilayered neural networks to perform tasks such as classification regression and representation learning</td>\n",
-       "      <td>21</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Unsupervised learning</td>\n",
-       "      <td>in machine learning supervised learning sl is a type of machine learning paradigm where an algorithm learns to map input data to a specific output based on example input-output pairs</td>\n",
-       "      <td>30</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Quantum Computing</td>\n",
-       "      <td>a quantum computer is a real or theoretical computer that uses quantum mechanical phenomena in an essential way it exploits superposed and entangled states and the intrinsically non-deterministic outcomes of quantum measurements as features of its computation</td>\n",
-       "      <td>37</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Environmental protection</td>\n",
-       "      <td>environmental protection or environment protection refers to the taking of measures to protecting the natural environment prevent pollution and maintain ecological balance</td>\n",
-       "      <td>22</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Climate Change</td>\n",
-       "      <td>present-day climate change includes both global warming—the ongoing increase in global average temperature—and its wider effects on earth climate system</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Renewable Energy</td>\n",
-       "      <td>renewable energy also called green energy is energy made from renewable natural resources that are replenished on a human timescale</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Biodiversity</td>\n",
-       "      <td>biodiversity is the variability of life on earth</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>French Cuisine</td>\n",
-       "      <td>french cuisine is the cooking traditions and practices of france</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Bread food</td>\n",
-       "      <td>bread is a baked food product made from water flour and often yeast</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Dumpling food</td>\n",
-       "      <td>manti is a type of dumpling mainly found in turkish cuisine armenian cuisine and central asian cuisine but also in west asia south caucasus and the balkans</td>\n",
-       "      <td>27</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  wiki query  \\\n",
-       "0   Artificial Intelligence    \n",
-       "1   Deep learning              \n",
-       "2   Unsupervised learning      \n",
-       "3   Quantum Computing          \n",
-       "4   Environmental protection   \n",
-       "5   Climate Change             \n",
-       "6   Renewable Energy           \n",
-       "7   Biodiversity               \n",
-       "8   French Cuisine             \n",
-       "9   Bread food                 \n",
-       "10  Dumpling food              \n",
-       "\n",
-       "                                                                                                                                                                                                                                                                   text  \\\n",
-       "0   artificial intelligence ai is the capability of computational systems to perform tasks typically associated with human intelligence such as learning reasoning problem-solving perception and decision-making                                                         \n",
-       "1   in machine learning deep learning focuses on utilizing multilayered neural networks to perform tasks such as classification regression and representation learning                                                                                                    \n",
-       "2   in machine learning supervised learning sl is a type of machine learning paradigm where an algorithm learns to map input data to a specific output based on example input-output pairs                                                                                \n",
-       "3   a quantum computer is a real or theoretical computer that uses quantum mechanical phenomena in an essential way it exploits superposed and entangled states and the intrinsically non-deterministic outcomes of quantum measurements as features of its computation   \n",
-       "4   environmental protection or environment protection refers to the taking of measures to protecting the natural environment prevent pollution and maintain ecological balance                                                                                           \n",
-       "5   present-day climate change includes both global warming—the ongoing increase in global average temperature—and its wider effects on earth climate system                                                                                                              \n",
-       "6   renewable energy also called green energy is energy made from renewable natural resources that are replenished on a human timescale                                                                                                                                   \n",
-       "7   biodiversity is the variability of life on earth                                                                                                                                                                                                                      \n",
-       "8   french cuisine is the cooking traditions and practices of france                                                                                                                                                                                                      \n",
-       "9   bread is a baked food product made from water flour and often yeast                                                                                                                                                                                                   \n",
-       "10  manti is a type of dumpling mainly found in turkish cuisine armenian cuisine and central asian cuisine but also in west asia south caucasus and the balkans                                                                                                           \n",
-       "\n",
-       "    n_words  bow_kmeans  emb_kmeans  emb_dbscan  emb_hierarchical  \n",
-       "0   25       1           2           0           3                 \n",
-       "1   21       2           2           0           3                 \n",
-       "2   30       2           2           0           3                 \n",
-       "3   37       1           2           0           3                 \n",
-       "4   22       0           0           1           2                 \n",
-       "5   20       1           0           1           2                 \n",
-       "6   20       1           0           1           2                 \n",
-       "7   8        1           0           1           2                 \n",
-       "8   10       1           1           2           1                 \n",
-       "9   13       1           1           2           1                 \n",
-       "10  27       1           1           2           1                 "
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'hier_emb_labels' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m wiki_df[\u001b[33m\"\u001b[39m\u001b[33memb_hierarchical\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[43mhier_emb_labels\u001b[49m\n\u001b[32m      2\u001b[39m wiki_df\n",
+      "\u001b[31mNameError\u001b[39m: name 'hier_emb_labels' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2135,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false
